style.css
@import url('https://fonts.googleapis.com/css2?family=Coiny&family=Titan+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nerko+One&family=Sriracha&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
}

:root{
    --color-pink: #feecea;
    --color-white: #fff;
    --color-black: #333;
    --color-text-pink: #FF7882;
    --color-heart: #FF7882;
    --color-bg-letter: #fff8e4;
    --color-border: #DACCBF;
    --color-peach: #FFDAB9;
    --color-medical-blue: #4FC3F7;
    --color-coffee: #6F4E37;
}

html{
    height: 100%;
}

body {
    position: relative;
    font-size: 16px;
    margin: 0;
    padding: 0;
    height: 100%;
    background-image:linear-gradient(var(--color-pink), var(--color-pink));
}

#wrapper{
    position: relative;
    background-color: transparent;
    background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, 1) 25%, rgba(255, 255, 255, 1) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, 1) 75%, rgba(255, 255, 255, 1) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255,255,1) 25%, rgba(255, 255,255,1) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, 1) 75%, rgba(255, 255, 255, 1) 76%, transparent 77%, transparent);
    min-height:100vh;
    background-size:80px 80px;
    overflow-x: hidden;
    z-index: 1;
    padding: 20px;
    margin: 0 auto;
    max-width: 1200px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.flag__birthday{
    display: flex;
    justify-content: space-between;
    transform: translateY(-200px);
    animation: translateYFlag 1.5s 2s forwards;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

@keyframes translateYFlag{
    to{
        transform: translateY(-10px);
    }
}

.flag__birthday .flag__left{
    transform: rotate(-10deg) translate(-20px,30px);
    max-width: 350px;
    height: auto;
    box-sizing: border-box;
    margin: 0 auto;
}

.flag__birthday .flag__right{
    transform: rotate(10deg) translate(20px,30px) scaleX(-1);
    max-width: 350px;
    height: auto;
    box-sizing: border-box;
    margin: 0 auto;
}

.content{
    width: 100%;
    position: relative;
    display: flex;
    padding-top: 3rem;
    max-width: 1200px;
    margin: 0 auto;
    justify-content: center;
    align-items: flex-start;
    flex-direction: row;
}

.content .left, .content .right{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-self: flex-start;
}

.content .left{
    width: 40%;
    min-width: 400px;
    padding-right: 20px;
}

.content .right{
    width: 60%;
    min-width: 500px;
    padding-left: 20px;
}

.left .btn{
    transform: scale(0);
    animation: scaleCricle 2s 16s forwards ease-in-out;
    display: flex;
    gap: 20px;
    align-items: center;
    box-sizing: border-box;
    margin: 0 auto;
    justify-content: center;
}

#btn__letter{
    position: relative;
    margin: 30px auto 0;
    background-color: var(--color-text-pink);
    outline: none;
    padding: 5px 15px;
    font-size: 1rem;
    border-radius: 50px;
    border: 3px solid var(--color-black);
    font-family: "Sriracha", cursive;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    z-index: 2;
    transform: scale(1);
    transition: all .5s ease-in-out;
    box-sizing: border-box;
}

#btn__letter:active{
    transform: scale(0.7);
}

#btn__letter i{
    margin-left: 5px;
}

#btn__letter:hover{
    border-color: var(--color-heart);
    background-color: var(--color-heart);
    color: #fff;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

#btn__letter:hover i{
    animation: rotateHeart 1s infinite linear;
}

.music-toggle {
    margin: 30px auto 0;
    background-color: var(--color-medical-blue);
    outline: none;
    padding: 5px 15px;
    font-size: 1rem;
    border-radius: 50px;
    border: 3px solid var(--color-black);
    font-family: "Sriracha", cursive;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    z-index: 2;
    transition: all .5s ease-in-out;
    box-sizing: border-box;
}

.music-toggle:hover {
    background-color: #039BE5;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

@keyframes rotateHeart{
    0%,50%, 100%{
        transform: rotate(0deg);
    }
    25%{
        transform: rotate(12deg);
    }
    75%{
        transform: rotate(-12deg);
    }
}

.title{
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    font-family: "Titan One", sans-serif;
    font-size: 3rem;
    flex-direction: column;
    perspective: 1000px;
    box-sizing: border-box;
    margin: 0 auto;
}

.title .happy, .title .birthday{
    position: relative;
    text-shadow: 4px 4px var(--color-black), 
                -4px 4px var(--color-black), 
                4px -4px var(--color-black), 
                -4px -4px var(--color-black), 
                4px 8px 0 var(--color-black);
    font-weight: bold;
    display: flex;
    justify-content: center;
    box-sizing: border-box;
    margin: 0 auto;
}

.title .happy{
    color: var(--color-white);
}

.title .happy span, .title .birthday span{
    transform: translateY(50px);
    opacity: 0;
    visibility: hidden;
    animation: txtTranslateY .5s var(--t) forwards;
}

@keyframes txtTranslateY{
    100%{
        transform: translateY(0);
        opacity: 1;
        visibility: visible;
    }
}

.title .birthday{
    color: var(--color-text-pink);
}

.title .hat{
    position: absolute;
    right: 45px;
    top: -350px;
    transform: rotate(-40deg);
    z-index: -1;
    animation: topHat 4s 7s forwards ease;
    box-sizing: border-box;
}
/* ... */

